testsuite/poke.pkl/struct-method-diag-6.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    method foo = void: {}
    method bar = void:
      {
        fun baz = void:
        {
          foo; /* { dg-error "only methods" } */
        }
      }
  };
